objects/Interview_Question__c.object
<CustomObject>
    <label>Interview Question</label>
    <nameField>
        <displayFormat>IQ-{0000}</displayFormat>
        <label>Interview Questions Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interview Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Area__c</fullName>
        <description>Area of knowledge</description>
        <inlineHelpText>Area of knowledge</inlineHelpText>
        <label>Area</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>The order this question should appear in</description>
        <inlineHelpText>The order this question should appear in</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>The question</description>
        <inlineHelpText>The question</inlineHelpText>
        <label>Question</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sub_Area__c</fullName>
        <description>Sub-section of the area of knowledge</description>
        <inlineHelpText>Sub-section of the area of knowledge</inlineHelpText>
        <label>Sub-Area</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal_Note__c</fullName>
        <description>Any internal details to know about the question</description>
        <inlineHelpText>Sub-section of the area of knowledge</inlineHelpText>
        <label>Internal Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Type__c</fullName>
        <description>The type of position this question is geared towards</description>
        <inlineHelpText>The type of position this question is geared towards</inlineHelpText>
        <label>Position Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce Administrator</fullName>
                </value>
                <value>
                    <fullName>Salesforce Developer</fullName>
                </value>
                <value>
                    <fullName>Introduction Interview</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>